--- a/src/input.css
+++ b/src/input.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
-@plugin "daisyui" {
-    themes: all;
-  };
+@plugin "daisyui";
 
 @layer components {
     .align-elements {
